--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-app-rewire-mobx": "^1.0.8",
     "react-app-rewired": "^1.5.2",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-extended": "^0.0.7",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
