--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "classnames": "^2.2.6",
     "firestorter": "^0.14.2",
     "jss": "^9.8.7",
+    "jss-camel-case": "^6.1.0",
     "jss-nested": "^6.0.1",
+    "jss-vendor-prefixer": "^8.0.1",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "react": "^16.4.1",
