--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "3",
+    "bootstrap": "4.4.1",
     "classnames": "^2.2.6",
-    "firestorter": "^0.14.2",
-    "jss": "^9.8.7",
+    "firestorter": "^2.0.1",
+    "jss": "^10.1.1",
     "jss-camel-case": "^6.1.0",
+    "jss-extend": "^6.2.0",
     "jss-nested": "^6.0.1",
     "jss-vendor-prefixer": "^8.0.1",
     "mobx": "^5.0.3",
-    "mobx-react": "^5.2.3",
+    "mobx-react": "^6.1.8",
     "mobx-react-router": "^4.0.4",
     "mobx-utils": "^5.0.0",
     "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "^1.0.0",
     "react-bootstrap-extended": "^0.0.7",
     "react-dom": "^16.4.1",
-    "react-jss": "^8.6.1",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-jss": "^10.1.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -31,14 +32,14 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "firebase": "^5.2.0",
+    "firebase": "^7.13.2",
     "node-sass": "^4.9.2",
     "react-app-rewire-build-dev": "^1.0.1",
     "react-app-rewire-mobx": "^1.0.8",
     "react-app-rewire-scss": "^1.0.2",
-    "react-app-rewired": "^1.5.2",
+    "react-app-rewired": "^2.1.5",
     "redux": "^4.0.0",
     "sass": "^1.9.0",
-    "sass-loader": "^7.0.3"
+    "sass-loader": "^8.0.2"
   }
 }
